--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -16,7 +16,7 @@
 		</nav>
 	</header>
 	<div id="hero">
-		<img src="images/bakery_cropped.png" alt="assortment of pastries such as egg tarts"/>
+		<img src="images/picsforwebsite/bakery_cropped.png" alt="assortment of pastries such as egg tarts"/>
 	</div>
 	<!--<section id="two column" class="clearfix">
 		<aside id="left">
