more content to commit

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -16,31 +16,86 @@
 		</nav>
 	</header>
 	<div id="hero">
-		<img src="images/picsforwebsite/bakery_cropped.png" alt="assortment of pastries such as egg tarts"/>
+		<img src="images/picsforbakery/bakery_cropped.png" alt="assortment of pastries such as egg tarts"/>
 	</div>
-	<!--<section id="two column" class="clearfix">
-		<aside id="left">
-			<p>ASIDE</p>
-			<p>Lorem Ipsum...</p>
-		</aside>
-		<article id="right">
-			<p>Article</p>
-			<p>Lorem Ipsum...</p>
-			<p>Lorem Ipsum...</p>
-		</article>
-	</section>-->	
+	</div>
+	<h1>Sweet Treats</h1>
+	<br>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/pineapple_pastry_275.jpg" alt="Pineapple Pastry" style="width:100%">
+	</div>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/pineapple_bun_275.jpg" alt="Pineapple Bun" style="width:100%">
+	</div>		
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/sweet_cream_bun.jpg" alt="Sweet Cream Bun" style="width:100%">
+	</div>		
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/custard_bun_275.jpg" alt="Custard Bun" style="width:100%">				
+	</div>
+	<br>
+	<h1>Savory Treats</h1>
+	<br>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/curry_bun_275.jpg" alt="Curry Bun" style="width:100%">				
+	</div>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/potato_croquette_275.jpg" alt="Potato Croquette" style="width:100%">				
+	</div>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/char_siu_bao_275.jpg" alt="Steamed Manapua/Bao" style="width:100%">				
+	</div>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/manapuas_steamed_baked_275.jpg" alt="Baked Manapua/Bao" style="width:100%">				
+	</div>
+	<br>
+	<h1>More Sweets & Treats</h1>
+	<br>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/japanese_cheesecake_275.jpg" alt="Japanese Cheesecake" style="width:100%">				
+	</div>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/sweet_potato_haupia_pie_275.jpg" alt="Sweet Potato Haupia Pie" style="width:100%">				
+	</div>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/pineapple_macadamia_nut_cheesecake_275.jpg" alt="Pineapple Macadamia Nut Cheesecake" style="width:100%">				
+	</div>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/haupia_coconut_pudding_275.jpg" alt="Haupia Coconut Pudding Squares" style="width:100%">				
+	</div>
+	<br>
+	<h1>Custom Wedding Cakes</h1>
+	<br>
+	<div class="row">
+		<div class="column">
+			<img src="images/picsforbakery/pineapple_wedding_cake_550.jpg" alt="Pineapple Wedding Cake" style="width:100%">"
+		</div>	
 	<div id="about">
 		<h2>About Us</h2>	
+		<br>
 		<p>Aloha! Welcome to Golden Pineapple Bakery. Whether you're looking for a quick bun for breakfast, or a curry croquette for lunch, we have just what you are craving.</p>
+		<br>
 		<p>We offer cakes for all occasions, malasadas, savory and sweet buns, manapua or baos, a variety of breads, and so much more. Come on by and take a look inside, you'll find some good old fashioned treats from across Asia and the pacific.</p>
 	</div>
 	<div id="locations">
 		<h2>Locations</h2>
 		<ul>
-			<li>Seattle, Washington</li>
-			<li>Los Angeles, California</li>
-			<li>Maui, Hawai'i</li>
-			<li>Tokyo, Japan</li>
+			<li>123 Boathouse Way, Seattle, WA 98109</li>
+			<li>456 Campus Lane, Los Angeles, CA 91087</li>
+			<li>789 Water Blvd, Maui, HI 96734</li>
+			<li>5-8-11, Minami Aoyama, Minato-Ku, Tokyo, Japan</li>
 		</ul>
 	<div class="container">
 		<form action+"action_page.php">
@@ -65,6 +120,5 @@
 	<footer>
 		<a href="mailto:delphilocey@gmail.com">Contact US</a>	
 	</footer>
-
 </body>
 </html>
