--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -4,6 +4,7 @@
 	<title>Golden Pineapple Bakery</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
 </head>
 <body>
 	<header>
@@ -20,106 +21,70 @@
 	<div id="hero">
 		<img src="images/picsforbakery/bakery_cropped.png" alt="assortment of pastries"/>
 	</div>
-	</div>
 	<h2>Sweet Treats</h2>
-	<br>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/pineapple_pastry_275.jpg" alt="Pineapple Pastry" style="width:100%">
-			<br>
-			<p><strong>Pineapple Pastry</strong></p>
-			<p>Order</p>
+	<div class="column">
+		<img src="images/picsforbakery/pineapple_pastry_275.jpg" alt="Pineapple Pastry" style="width:100%">
+		<p><strong>Pineapple Pastry</strong></p>
+		<p>Order</p>
 	</div>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/pineapple_bun_275.jpg" alt="Pineapple Bun" style="width:100%">
-			<br>
-			<p><strong>Pineapple Bun</strong></p>
-			<p>Order</p>
+	<div class="column">
+		<img src="images/picsforbakery/pineapple_bun_275.jpg" alt="Pineapple Bun" style="width:100%">
+		<p><strong>Pineapple Bun</strong></p>
+		<p>Order</p>
 	</div>		
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/sweet_cream_bun.jpg" alt="Sweet Cream Bun" style="width:100%">
-			<br>
-			<p><strong>Sweet Cream Bun</strong></p>
-			<p>Order</p>		
+	<div class="column">
+		<img src="images/picsforbakery/sweet_cream_bun.jpg" alt="Sweet Cream Bun" style="width:100%">
+		<p><strong>Sweet Cream Bun</strong></p>
+		<p>Order</p>		
 	</div>		
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/custard_bun_275.jpg" alt="Custard Bun" style="width:100%">
-			<br>
-			<p><strong>Custard Bun</strong></p>
-			<p>Order</p>				
+	<div class="column">
+		<img src="images/picsforbakery/custard_bun_275.jpg" alt="Custard Bun" style="width:100%">
+		<p><strong>Custard Bun</strong></p>
+		<p>Order</p>				
 	</div>
-	<br>
 	<h2>Savory Treats</h2>
-	<br>
-	<div class="row">
 		<div class="column">
-			<img src="images/picsforbakery/curry_bun_275.jpg" alt="Curry Bun" style="width:100%">
-			<br>
-			<p><strong>Curry Bun</strong></p>
-			<p>Order</p>				
+		<img src="images/picsforbakery/curry_bun_275.jpg" alt="Curry Bun" style="width:100%">
+		<p><strong>Curry Bun</strong></p>
+		<p>Order</p>				
 	</div>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/potato_croquette_275.jpg" alt="Potato Croquette" style="width:100%">
-			<br>
-			<p><strong>Potato Croquette</strong></p>
-			<p>Order</p>				
+	<div class="column">
+		<img src="images/picsforbakery/potato_croquette_275.jpg" alt="Potato Croquette" style="width:100%">
+		<p><strong>Potato Croquette</strong></p>
+		<p>Order</p>				
 	</div>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/char_siu_bao_275.jpg" alt="Steamed Manapua/Bao" style="width:100%">
-			<br>
-			<p><strong>Steamed Manapua</strong></p>
-			<p>Order</p>				
+	<div class="column">
+		<img src="images/picsforbakery/char_siu_bao_275.jpg" alt="Steamed Manapua/Bao" style="width:100%">
+		<p><strong>Steamed Manapua</strong></p>
+		<p>Order</p>				
 	</div>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/manapuas_steamed_baked_275.jpg" alt="Baked Manapua" style="width:100%">
-			<br>
-			<p><strong>Baked Manapua</strong></p>
-			<p>Order</p>				
+	<div class="column">
+		<img src="images/picsforbakery/manapuas_steamed_baked_275.jpg" alt="Baked Manapua" style="width:100%">
+		<p><strong>Baked Manapua</strong></p>
+		<p>Order</p>				
 	</div>
-	<br>
 	<h2>More Sweets & Treats</h2>
-	<br>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/japanese_cheesecake_275.jpg" alt="Japanese Cheesecake" style="width:100%">
-			<br>
-			<p><strong>Japanese Cheesecake</strong></p>
-			<p>Order</p>				
+	<div class="column">
+		<img src="images/picsforbakery/japanese_cheesecake_275.jpg" alt="Japanese Cheesecake" style="width:100%">
+		<p><strong>Japanese Cheesecake</strong></p>
+		<p>Order</p>				
 	</div>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/sweet_potato_haupia_pie_275.jpg" alt="Sweet Potato Haupia Pie" style="width:100%">
-			<br>
-			<p><strong>Sweet Potato Haupia Pie</strong></p>
-			<p>Order</p>				
+	<div class="column">
+		<img src="images/picsforbakery/sweet_potato_haupia_pie_275.jpg" alt="Sweet Potato Haupia Pie" style="width:100%">
+		<p><strong>Sweet Potato Haupia Pie</strong></p>
+		<p>Order</p>				
 	</div>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/pineapple_macadamia_nut_cheesecake_275.jpg" alt="Pineapple Macadamia Nut Cheesecake" style="width:100%">
-			<br>
-			<p><strong>Pineapple Macadamia Nut Cheesecake</strong></p>
-			<p>Order</p>				
+	<div class="column">
+		<img src="images/picsforbakery/pineapple_macadamia_nut_cheesecake_275.jpg" alt="Pineapple Macadamia Nut Cheesecake" style="width:100%">
+		<p><strong>Pineapple Macadamia Nut Cheesecake</strong></p>
+		<p>Order</p>				
 	</div>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/haupia_coconut_pudding_275.jpg" alt="Haupia Coconut Pudding Squares" style="width:100%">
-			<br>
-			<p><strong>Cocunut Pudding Squares</strong></p>
-			<p>Order</p>				
+	<div class="column">
+		<img src="images/picsforbakery/haupia_coconut_pudding_275.jpg" alt="Haupia Coconut Pudding Squares" style="width:100%">
+		<p><strong>Cocunut Pudding Squares</strong></p>
+		<p>Order</p>				
 	</div>
 	<br>
-	<!--<h1>Custom Wedding Cakes</h1>
-	<br>
-	<div class="row">
-		<div class="column">
-			<img src="images/picsforbakery/pineapple_wedding_cake_550.jpg" alt="Pineapple Wedding Cake" style="width:100%">"
-		</div>-->
 	<div id="about">
 		<h2>About Us</h2>	
 		<br>
@@ -129,40 +94,29 @@
 	</div>
 	<div id="locations">
 		<h2>Locations</h2>
-			<p>Washington</p>
-			<p>California</p>
-			<p>Hawai'i</p>
-			<p>Japan</p>		
+			<p><a href="#">Washington</a></p>
+			<p><a href="#">California</a></p>
+			<p><a href="#">Hawai'i</a></p>
+			<p><a href="#">Japan</a></p>		
 	</div>
 	<div class="container">
 		<h3>Contact Us</h3>
 		<form action="action_page.php">
-		<div>
-			<label for="fname">First Name</label>
-			<input type="text" id="fname" name="firstname" placeholder="Your name..">
-		<br/><br/>
-		</div>
-		<div>	
-			<label for="lname">Last Name</label>
-			<input type="text" id="lname" name="lastname" placeholder="Your last name..">
-		<br/><br/>
-		</div>	
-		<div>	
-			<label for="country">Country</label>
-			<select id="country" name="country">
-				<option value="usa">USA</option>
-				<option value="canada">Canada</option>
-				<option value="japan">Japan</option>
-			</select>
-		<br/><br/>	
-		</div>
-		<div>	
-			<label for="subject">Subject</label>
-			<textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-		<br/><br/>	
-		<div>	
-			<input type="submit" value="Submit">
-		</div>	
+	<div>
+		<label for="name">Your Name</label>
+		<input type="text" id="name" name="name" placeholder="Your name.."/>
+		
+	</div>
+	<div>	
+		<label for="email">Your Email</label>
+		<input type="text" id="email" name="email" placeholder="Your email address..">
+	</div>	
+	<div>	
+		<label for="subject">Subject</label>
+		<textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>	
+	<div>	
+		<input type="submit" value="Submit">
+	</div>	
 		</div>	
 		</form>
 	</div>		
